test/fail/optargs/optarg_before_normal.lly
#[
SyntaxError: Non-optional argument follows optional argument.
    from optarg_before_normal.lly:6:
]#

define f(a: *Integer=10, b: Integer) {  }
